<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TangoBot</string>
    <string name="tango_version_error">Your version of Tango is out of date</string>
    <string name="tango_lib_error">Unable to load Tango library</string>
    <string name="ros_init_error">Unable to init ROS! Do you have a Roscore running?</string>
    <string name="ros_init_ok">ROS master connection OK</string>
    <string name="tango_service_error">Unable to connect to Tango Service</string>
    <string name="tango_bind_error">Unable to bind to Tango Service</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="snackbar_text_restart">You will need to restart the app to apply these new settings.</string>

    <!-- Strings related to ROS Settings -->
    <string name="pref_category_ros_title">ROS</string>
    <string name="pref_category_ros_key">pref_category_ros</string>

    <string name="pref_master_is_local_title">Run master on this device</string>
    <string name="pref_master_is_local_key">pref_master_is_local</string>
    <string name="pref_master_is_local_summary">NOTE: Currently incompatible with desktop roslaunch. </string>

    <string name="pref_master_uri_title">Master URI</string>
    <string name="pref_master_uri_key">pref_master_uri</string>
    <string name="pref_master_uri_default">http://local-desktop:11311</string>
    <string name="pref_use_same_config_next_time_title">Show settings on startup</string>
    <string name="pref_show_settings_on_startup_key">pref_show_settings_on_startup</string>
    <string name="pref_show_settings_on_startup_summary">Enable to show this screen next time</string>

    <!-- Settings texts -->
    <string name="welcome_text_first_run">Welcome to Tangobot app! Please define your settings to continue.</string>
    <string name="snackbar_text_first_run">Click DONE to start after your settings are ready</string>
    <string name="snackbar_action_text_first_run">Done</string>
    <string name="tango_permission_denied">Tango permission denied! Unable to connect to Tango.</string>
</resources>
