<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_ros_title"
        android:key="@string/pref_category_ros_key">
        <CheckBoxPreference
            android:title="@string/pref_master_is_local_title"
            android:key="@string/pref_master_is_local_key"
            android:defaultValue="false"
            android:disableDependentsState="true"
            android:summary="@string/pref_master_is_local_summary"/>

        <EditTextPreference
            android:title="@string/pref_master_uri_title"
            android:key="@string/pref_master_uri_key"
            android:defaultValue="@string/pref_master_uri_default"
            android:dependency="@string/pref_master_is_local_key"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:singleLine="true"
            android:selectAllOnFocus="true"/>
    </PreferenceCategory>
</PreferenceScreen>
